mutants.out/log/crates__script__src__lib.rs_line_173_col_9.log

*** crates/script/src/lib.rs:173:9: replace ScriptRunner::compile_with_rustc -> Result<CompiledScript, ScriptError> with Ok(Default::default())

*** mutation diff:
--- crates/script/src/lib.rs
+++ replace ScriptRunner::compile_with_rustc -> Result<CompiledScript, ScriptError> with Ok(Default::default())
@@ -165,46 +165,17 @@
         if !request.dependencies.is_empty() {
             return self.compile_with_cargo(request);
         }
 
         self.compile_with_rustc(request)
     }
 
     fn compile_with_rustc(&self, request: &ScriptRequest) -> Result<CompiledScript, ScriptError> {
-        let workspace = ScriptWorkspace::create(&self.temp_root)?;
-        let user_source_path = workspace.path().join("script.rs");
-        let wrapper_path = workspace.path().join("main.rs");
-        let binary_path = workspace.path().join(binary_name());
-
-        fs::write(&user_source_path, &request.rust_source).map_err(to_io_error)?;
-        fs::write(&wrapper_path, wrapper_source(&user_source_path)).map_err(to_io_error)?;
-
-        let compile_output = Command::new(&self.rustc)
-            .arg("--edition")
-            .arg(&self.edition)
-            .arg(&wrapper_path)
-            .arg("-o")
-            .arg(&binary_path)
-            .output()
-            .map_err(to_io_error)?;
-
-        if !compile_output.status.success() {
-            return Err(ScriptError::CompileFailed {
-                stdout: String::from_utf8_lossy(&compile_output.stdout).into_owned(),
-                stderr: String::from_utf8_lossy(&compile_output.stderr).into_owned(),
-                exit_code: compile_output.status.code(),
-            });
-        }
-
-        Ok(CompiledScript {
-            workspace,
-            binary_path,
-            input_json: request.input_json.clone(),
-        })
+        Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
     }
 
     fn compile_with_cargo(&self, request: &ScriptRequest) -> Result<CompiledScript, ScriptError> {
         let workspace = ScriptWorkspace::create(&self.temp_root)?;
         let src_dir = workspace.path().join("src");
         let user_source_path = src_dir.join("script.rs");
         let wrapper_path = src_dir.join("main.rs");
         let manifest_path = workspace.path().join("Cargo.toml");


*** /Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/cargo test --no-run --verbose --package=script@0.1.0
       Dirty script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/crates/script): the file `crates/script/src/lib.rs` has changed (1778057827.892290369s, 6s after last build at 1778057821.583947895s)
   Compiling script v0.1.0 (/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/crates/script)
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=19ba3a930712f621 -C extra-filename=-d9ac782f4dc64702 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps`
     Running `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fb3202c648cb3754 -C extra-filename=-d02cc1a249e66324 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps`
error[E0277]: the trait bound `CompiledScript: Default` is not satisfied
   --> crates/script/src/lib.rs:173:12
    |
173 |         Ok(Default::default()) /* ~ changed by cargo-mutants ~ */
    |            ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `CompiledScript`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `script` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=19ba3a930712f621 -C extra-filename=-d9ac782f4dc64702 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error: could not compile `script` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/Users/leejs/.rustup/toolchains/stable-aarch64-apple-darwin/bin/rustc --crate-name script --edition=2024 crates/script/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 -C split-debuginfo=unpacked --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=fb3202c648cb3754 -C extra-filename=-d02cc1a249e66324 --out-dir /private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps -C incremental=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/incremental -L dependency=/private/var/folders/j9/vyb9gbys5db86cwqm3mld1fw0000gn/T/cargo-mutants-Manual-VgEIDy.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
